Changelog
=========

2.0b4 - unreleased
------------------

- Replace the required field indicator image with a unicode box.
  Refs http://dev.plone.org/plone/ticket/10352
  [davisagli, limi]

2.0b3 - 2010-03-05
------------------

- Decode form inputs before trying to do inline validation of them, the same
  way they would be in a real form submission. This closes
  http://dev.plone.org/plone/ticket/9757.
  [davisagli]

- Use the search text input as the target for the uberselection widget label.
  Fixes invalid HTML.
  [rossp]

- Fix invalid HTML by moving the xmlns declarations into a tag that will be
  omitted by TAL.
  [rossp]

2.0b2 - 2010-02-17
------------------

- Updated pageform.pt to follow recent markup conventions.
  References http://dev.plone.org/plone/ticket/9981.
  [spliter]

- Fixed macro call in add form page template.
  [do3cc]

2.0b1 - 2009-12-27
------------------

- Fixed package dependency declaration.
  [hannosch]

2.0a2 - 2009-12-02
------------------

- Updated the LanguageDropdownChoiceWidget to present its options sorted by
  the localized title. So far it showed localized titles while keeping
  English ordering.
  [hannosch]

2.0a1 - 2009-11-14
------------------

- Made sure to use the correct ViewPageTemplateFile from Products.Five.
  [hannosch]

- Updated to use new locations for IAdding and IObjectEvent.
  [hannosch]

- Updated checkboxwidget hacks to work with zope.app.form 3.8.0.
  [hannosch]

- Use getSite from zope.site instead of zope.app.component.
  [hannosch]

- Made sure tests don't rely on kupu.
  [hannosch]

- Updated import of ITerms to zope.browser.interfaces.
  [hannosch]

- Made kss support truly optional and advertise it via an extra.
  [hannosch]

- Use our own PloneMessageFactory. We don't depend on CMFPlone anymore.
  [hannosch]

- Specified package dependencies.
  [hannosch]

- Corrected the NamedTemplateAdapter to work with the modified
  ViewPageTemplateFile in Zope 2.12.
  [davisagli]

1.1.9 - Unreleased